# regicide-game

./: README.md  pyproject.toml
regicide_game/: card.py  game.py  main.py  player.py
tests/: test_card.py  test_hello_world.py  test_player.py
