[tool.poetry]
name = "regicide-game"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "regicide_game"}]

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
